@@ -1,3 +1,8 @@
+2004-06-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/16195
+	* gcc.dg/20040625-1.c: New test.
+
 2004-06-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/16114
